k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-ge-svc
  namespace: app
  labels:
    app: app-ge
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: app-ge
