k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ge-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app-ge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-ge-svc
                port:
                  number: 80
